md_parser/src/snapshots/md_parser__parser__tests__parse_markdown@input2.md.snap
---
source: md_parser/src/parser.rs
expression: ast
input_file: md_parser/src/snapshot_inputs/input2.md
---
[
  {
    "Header": {
      "level": 3,
      "children": [
        {
          "Text": "Article"
        },
        {
          "Text": " "
        },
        {
          "Text": "of"
        },
        {
          "Text": " "
        },
        {
          "Text": "the"
        },
        {
          "Text": " "
        },
        {
          "Text": "week"
        }
      ]
    }
  },
  {
    "Paragraph": {
      "children": [
        {
          "Text": "In"
        },
        {
          "Text": " "
        },
        {
          "Text": "my"
        },
        {
          "Text": " "
        },
        {
          "Text": "walks"
        },
        {
          "Text": " "
        },
        {
          "Text": "around"
        },
        {
          "Text": " "
        },
        {
          "Text": "the"
        },
        {
          "Text": " "
        },
        {
          "Link": {
            "children": [
              {
                "Text": "Prater"
              },
              {
                "Text": " "
              },
              {
                "Text": "Park"
              }
            ],
            "url": [
              {
                "Text": "https://www"
              },
              {
                "Text": "."
              },
              {
                "Text": "praterwien"
              },
              {
                "Text": "."
              },
              {
                "Text": "com/en/home"
              }
            ]
          }
        },
        {
          "Text": " "
        },
        {
          "Text": "I've"
        },
        {
          "Text": " "
        },
        {
          "Text": "been"
        },
        {
          "Text": " "
        },
        {
          "Text": "very"
        },
        "LineBreak",
        {
          "Text": "happy"
        },
        {
          "Text": " "
        },
        {
          "Text": "to"
        },
        {
          "Text": " "
        },
        {
          "Text": "be"
        },
        {
          "Text": " "
        },
        {
          "Text": "able"
        },
        {
          "Text": " "
        },
        {
          "Text": "to"
        },
        {
          "Text": " "
        },
        {
          "Text": "enjoy"
        },
        {
          "Text": " "
        },
        {
          "Text": "nature"
        },
        {
          "Text": " "
        },
        {
          "Text": "in"
        },
        {
          "Text": " "
        },
        {
          "Text": "it's"
        },
        {
          "Text": " "
        },
        {
          "Text": "true"
        },
        {
          "Text": " "
        },
        {
          "Text": "form"
        },
        {
          "Text": " "
        },
        {
          "Text": "across"
        },
        {
          "Text": " "
        },
        {
          "Text": "all"
        },
        {
          "Text": " "
        },
        {
          "Text": "the"
        },
        {
          "Text": " "
        },
        {
          "Strong": {
            "children": [
              {
                "Text": "seasons"
              }
            ]
          }
        },
        {
          "Text": "."
        }
      ]
    }
  },
  {
    "Paragraph": {
      "children": [
        {
          "Text": "Particularly"
        },
        {
          "Text": " "
        },
        {
          "Text": "during"
        },
        {
          "Text": " "
        },
        {
          "Text": "summer"
        },
        {
          "Text": " "
        },
        {
          "Text": "where"
        },
        {
          "Text": " "
        },
        {
          "Text": "it's"
        },
        {
          "Text": " "
        },
        {
          "Text": "all"
        },
        {
          "Text": " "
        },
        {
          "Strong": {
            "children": [
              {
                "Text": "green"
              }
            ]
          }
        },
        {
          "Text": " "
        },
        {
          "Text": "and"
        },
        {
          "Text": " "
        },
        {
          "Text": "beautiful"
        },
        {
          "Text": "."
        }
      ]
    }
  },
  {
    "Header": {
      "level": 2,
      "children": [
        {
          "Text": "Another"
        },
        {
          "Text": " "
        },
        {
          "Text": "header"
        }
      ]
    }
  }
]
