md_parser/src/snapshots/md_parser__parser__tests__parse_markdown@lexer_input.md.snap
---
source: md_parser/src/parser.rs
expression: ast
input_file: md_parser/src/snapshot_inputs/lexer_input.md
---
[
  {
    "Header": {
      "level": 1,
      "children": [
        {
          "Text": "Hi"
        },
        {
          "Text": " "
        },
        {
          "Text": "there"
        }
      ]
    }
  },
  {
    "Paragraph": {
      "children": [
        {
          "Text": "This"
        },
        {
          "Text": " "
        },
        {
          "Text": "should"
        },
        {
          "Text": " "
        },
        {
          "Text": "be"
        },
        {
          "Text": " "
        },
        {
          "Text": "text"
        },
        {
          "Text": " "
        },
        {
          "Text": "_"
        },
        {
          "Text": "wrapped"
        },
        {
          "Text": " "
        },
        {
          "Text": "in"
        },
        {
          "Text": " "
        },
        {
          "Text": "underscore"
        },
        {
          "Text": "_"
        },
        {
          "Text": " "
        },
        {
          "Text": "and"
        },
        {
          "Text": " "
        },
        {
          "Text": "\\"
        },
        {
          "Text": "\\"
        },
        {
          "Text": "escaped"
        },
        "LineBreak",
        {
          "Strong": {
            "children": [
              {
                "Text": "bold"
              },
              {
                "Text": " "
              },
              {
                "Text": "text"
              },
              {
                "Text": " "
              },
              {
                "Text": "here"
              }
            ]
          }
        },
        {
          "Text": " "
        },
        {
          "Text": "with"
        },
        {
          "Text": " "
        },
        {
          "Text": "a"
        },
        {
          "Text": " "
        },
        {
          "Text": "nice"
        },
        {
          "Text": " "
        },
        {
          "Link": {
            "children": [
              {
                "Text": "link"
              },
              {
                "Text": " "
              },
              {
                "Text": "here"
              }
            ],
            "url": [
              {
                "Text": "https://bpaulino"
              },
              {
                "Text": "."
              },
              {
                "Text": "com"
              }
            ]
          }
        },
        {
          "Text": " "
        },
        {
          "Text": "and"
        },
        {
          "Text": " "
        },
        {
          "Text": "text"
        },
        {
          "Text": " "
        },
        {
          "Text": "after"
        },
        {
          "Text": " "
        },
        {
          "Text": "the"
        },
        {
          "Text": " "
        },
        {
          "Text": "link"
        },
        "LineBreak"
      ]
    }
  }
]
